<resources>
    <string name="app_name">KiwiTextEditor</string>
    <string name="tvSplash">Kiwi Text Editor</string>
    <string name="home">Home</string>
    <string name="done">Done</string>
    <string name="textonphoto">Text On Photo</string>
    <string name="mywork">My Work</string>
    <string name="save">Save photo</string>
    <string name="setting">Setting</string>
    <string name="version">VERSION 1.0.0</string>
    <string name="update">Check for update</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share App</string>
    <string name="rate">Rate App</string>
    <string name="privacy">Privacy Policy</string>
    <string name="saved">Save</string>
    <string name="library">Library</string>
    <string name="camera">Camera</string>
    <string name="saveImage">Saved Image</string>
    <string name="Donthave">You don\'t have any workart here </string>

    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="idAdtrungian">ca-app-pub-3159028965186310/8862927454</string>
    <string name="idAd">ca-app-pub-3159028965186310~7047761836</string>
    <string name="bannerid">ca-app-pub-3159028965186310/6856190149</string>
    <string name="bannerid2">ca-app-pub-3159028965186310/8301133758</string>
    <string name="banneridTest">ca-app-pub-3940256099942544/6300978111</string>
</resources>
