<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.kiwitexteditor.fragment.setting.SettingViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/colorActionbar"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorWhile"
            android:layout_height="?actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivLeft"
                    android:layout_width="wrap_content"
                    android:tint="@color/colorgreen"
                    android:layout_alignParentLeft="true"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_left" />
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorgreen"
                    android:layout_toRightOf="@id/ivLeft"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/textsizeTitle"
                    android:text="@string/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:id="@+id/llSetting"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ContainerUpdate"
                android:background="@color/colorActionbar"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivUpdate"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:tint="@color/colorgreen"
                    android:src="@drawable/ic_system_update"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/tvUpdate"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/ivUpdate"
                    app:layout_constraintRight_toLeftOf="@id/tvVersion"
                    android:layout_marginRight="10dp"
                    android:text="@string/update"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textSize="@dimen/textsizeContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvVersion"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/version"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textSize="@dimen/textsizeContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ContainerFeedback"
                android:background="@color/colorActionbar"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivFeedback"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:tint="@color/colorgreen"
                    android:src="@drawable/ic_setting_message_three_points"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/tvFeedback"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/ivFeedback"
                    android:text="@string/feedback"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textSize="@dimen/textsizeContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ContainerShareApp"
                android:background="@color/colorActionbar"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:tint="@color/colorgreen"
                    android:src="@drawable/ic_setting_share_outlined"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/tvShare"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/ivShare"
                    android:text="@string/share"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textSize="@dimen/textsizeContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ContainerRate"
                android:background="@color/colorActionbar"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivRate"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:tint="@color/colorgreen"
                    android:src="@drawable/ic_star_favorite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/tvRate"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/ivRate"
                    android:text="@string/rate"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textSize="@dimen/textsizeContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ContainerPrivacy"
                android:background="@color/colorActionbar"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivPrivacy"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:tint="@color/colorgreen"
                    android:src="@drawable/ic_bookmark_circle_fill_1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/tvPrivacy"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/ivPrivacy"
                    android:text="@string/privacy"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textSize="@dimen/textsizeContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
