<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.kiwitexteditor.fragment.home.HomeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/colorActionbar"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorActionbar"
            android:layout_height="?actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvTitle"
                    android:textColor="#f58379"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/textsizeTitle"
                    android:text="@string/home"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/ivRight"
                    android:layout_width="wrap_content"
                    android:tint="#e33267"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_settings" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerLibrary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivBgLibrary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/image_1"
                    app:layout_constraintDimensionRatio="1:1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"/>
                <ImageView
                    android:id="@+id/ivLibrary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_background_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivLibrary"
                    android:text="@string/library"
                    android:textColor="@color/colorWhile"
                    android:textSize="@dimen/textsizeContent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerCamera"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivBgCamera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/image_2"
                    app:layout_constraintDimensionRatio="1:1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"/>
                <ImageView
                    android:id="@+id/ivCamera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivCamera"
                    android:layout_centerHorizontal="true"
                    android:text="@string/camera"
                    android:textColor="@color/colorWhile"
                    android:textSize="@dimen/textsizeContent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerSavedImage"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivBgSaved"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/image_3"
                    app:layout_constraintDimensionRatio="1:1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"/>
                <ImageView
                    android:id="@+id/ivSaved"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_spa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivSaved"
                    android:layout_centerHorizontal="true"
                    android:text="@string/saveImage"
                    android:textColor="@color/colorWhile"
                    android:textSize="@dimen/textsizeContent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
